# editem-apparatus

./: .gitignore  LICENSE  Makefile  README.md  poetry_scripts.py  pyproject.toml
.github/workflows/: python-package.yml
editem_apparatus/: apparatus_converter.py  apparatus_handler.py  configs.py  editem_apparatus_config.py  editem_menu_config.py  home_converter.py  home_handler.py  io_tools.py  menu_converter.py  utils.py
scripts/: ed-convert-apparatus.py  ed-convert-home.py  ed-convert-menu.py
test/: apparatus_test.py
